--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ plugins:
 
 exclude:
   - "/vendor/"
+  - "/tools/"
 
 # Site settings
 title: Centrarium
@@ -102,83 +103,6 @@ social:
     username: Ben Centra
     url: https://www.linkedin.com/pub/ben-centra/47/769/60a
     desc: Connect with me on LinkedIn
-    share: true
-
-  - name: Google+
-    icon: google-plus
-    username: ""
-    url: ""
-    desc: Add me to your Circles
-    share: true
-
-  - name: YouTube
-    icon: youtube
-    username: ""
-    url: ""
-    desc: Subscribe on YouTube
-    share: false
-
-  - name: Instagram
-    icon: instagram
-    username: ""
-    url: ""
-    desc: Follow me on Instagram
-    share: false
-
-  - name: Pinterest
-    icon: pinterest
-    username: ""
-    url: ""
-    desc: Follow me on Pinterest
-    share: true
-
-  - name: SoundCloud
-    icon: soundcloud
-    username: ""
-    url: ""
-    desc: Follow me on SoundCloud
-    share: false
-
-  - name: Tumblr
-    icon: tumblr
-    username: ""
-    url: ""
-    desc: Follow me on Tumblr
-    share: false
-
-  - name: Steam
-    icon: steam
-    username: ""
-    url: ""
-    desc: Friend me on Steam
-    share: false
-
-  - name: Dribbble
-    icon: dribbble
-    username: ""
-    url: ""
-    desc: Follow me on Dribble
-    share: false
-
-  - name: Vimeo
-    icon: vimeo-square
-    username: ""
-    url: ""
-    desc: Follow me on Vimeo
-    share: false
-
-  - name: Vine
-    icon: vine
-    username: ""
-    url: ""
-    desc: Follow me on Vine
-    share: false
-
-  - name: Reddit
-    icon: reddit
-    username: ""
-    url: ""
-    desc: Share to Reddit
     share: true
 
   - name: "Hacker News"
