--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 plugins:
   - jekyll-archives # Sorry, not GitHub pages friendly!
   - jekyll-sitemap
-  - jekyll-paginate-v2
+  - jekyll-paginate
 
 exclude:
   - "/vendor/"
@@ -34,6 +34,8 @@ pagination:
   per_page: 5
   permalink: "/page/:num/"
   sort_reverse: true
+
+paginate: 10
 
 # Archive settings (see https://github.com/jekyll/jekyll-archives/)
 jekyll-archives:
