--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,11 @@ url: "" # the base hostname & protocol for your site
 
 # Build settings
 markdown: kramdown
+kramdown:
+  syntax_highlighter_opts:
+    line_width: 120
 inter_post_navigation: false
-highlightjs_theme: "monokai-sublime"
+highlightjs_theme: "tomorrow-night-eighties"
 
 # Pagination Settings
 # https://github.com/sverrirs/jekyll-paginate-v2/blob/master/README-GENERATOR.md#site-configuration
